# OSGLauncher

./: CMakeLists.txt  Dockerfile  Jenkinsfile  Jenkinsfile.MSVC  LICENSE  README.md  inputhandler.cpp  inputhandler.h  main.cpp  main.h  menuentry.cpp  menuentry.h  settings.cpp  settings.h
config/: osglauncher.xml
config/example/: osglauncher.xml
